2004-03-04 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b97

	* Change: More replacing of $GALLERY_BASEDIR.
		  Note: Now NO include() or require() needs this anymore.

2004-03-04 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b96

	* Change: Created new layout Block adminAlbumCommands.

2004-03-04  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b95

	* Added new Wooden frame.  Contributed by stormfrog.

2004-03-04 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b94

	* Change: More replacing of $GALLERY_BASEDIR

	* Change: Removed warnings in GeekLog classes and add_comment.php

	* Bugfix: Added missing username in SQL select in loadByUserName in GeekLog class.

	* Bugfix: Only show "Forgot Password ..." when Email is on.

	* Change: Some rewording and beautification in config.

2004-03-03  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b93

	* Bugfix: avoid bad alt text on album thumbnail when title contains
	  quotes or html.

2004-03-03  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b92

	* Rebuild thumbs also rebuilds subalbum highlights.

	* Bugfix: Use correct size to rebuild highlight when called from
	  makeThumbnail (via edit-thumb or rebuild-thumbs operation).

	* Removed redundant re-highlight in rotatePhoto().. already done
	  in AlbumItem rotate().

	* Bugfix: fixed rotate_image() to not return error status when
	  used with ImageMagick.

2004-03-03  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b91

	* Change:  Move the nav_home icon inside the returnTo link, for breadcrumbs.
	  k-man discovered that if galleryTitle isn't set (or is "")
	  it has the same effect as disabling returnTo on single-level
	  albums, since the anchor is displayed empty.

2004-03-03  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b90

	* Added new Spiral Notebook frame.  Thanks to carlandtracey.com;
	  converted to html_wrap/frames format by me.

	* Bug 821073: fixed cut_image() to not return error status when
	  used with ImageMagick.
